<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestor de descargas</string>
    <string name="welcome">Gestor de descarga de archivos.</string>
    <string name="user">Ingrese Usuario</string>
    <string name="pass">Ingrese Contraseña</string>
    <string name="action_settings">Preferencias</string>
    <string name="TextBtnLogin">Iniciar Sesión</string>
    <string name="title_activity_validar_login">Usuario:</string>
    <string name="filesTextView">Archivos:</string>
    <string name="spinnerTitle">Selecciona un archivo</string>
    <string name="files">Archivos</string>
    <string name="errorLoginMsg">Usuario y/o Contraseña inválidos. Intente nuevamente.</string>
    <string name="title_activity_gestionar_decarga">Usuario:</string>
    <string name="buttonDownload">Iniciar Descarga</string>
    <string name="titleStartDownload">Iniciando descarga...</string>
    <string name="titleFinishDownload">Archivo descargado correctamente.</string>    

</resources>