<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uy.com.antel.capacitacion.pruebacursobasico.GestionarDescargaActivity" >

    <TextView
        android:id="@+id/textViewVL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/filesTextView"/>

    <Spinner
        android:id="@+id/spinnerVL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewVL"
        android:layout_below="@+id/textViewVL"
        android:layout_marginTop="40dp"
        android:prompt="@string/spinnerTitle" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerVL"
        android:layout_below="@+id/spinnerVL"
        android:layout_marginTop="40dp"
        android:text="@string/buttonDownload" />

</RelativeLayout>
